<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/read_setting_dialog_bg"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <!--<TextView-->
        <!--android:id="@+id/tv_dark"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/setting_dark"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="16sp" />-->

        <LinearLayout
            android:id="@+id/tv_dark"
            android:layout_width="@dimen/dp60"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/setting_dark"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp">

            <ImageView
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:src="@mipmap/mo_aotao_reader_moon" />

        </LinearLayout>

        <!--进度条效果-->
        <!--https://www.cnblogs.com/xiaomo8086/p/4193662.html-->

        <SeekBar
            android:id="@+id/sb_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:max="100"
            android:maxHeight="1dp"
            android:progressDrawable="@drawable/mo_aotao_reader_pop_seekbar"
            android:thumb="@drawable/mo_aotao_reader_pop_seekbar_thumb" />

        <!--<TextView-->
        <!--android:id="@+id/tv_bright"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/setting_bright"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="16sp" />-->

        <LinearLayout
            android:id="@+id/tv_bright"
            android:layout_width="@dimen/dp60"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/setting_bright"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp">

            <ImageView
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:src="@mipmap/mo_aotao_reader_sun" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_xitong"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="10dp"
            android:text="@string/setting_system"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp80"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="字号"
            android:textColor="#afaeb3"
            android:textSize="@dimen/sp22" />

        <TextView
            android:id="@+id/tv_subtract"
            style="@style/setting_dialog_button"
            android:layout_width="0dp"
            android:layout_marginRight="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/setting_subtract"
            android:textColor="@color/white"
            android:textSize="@dimen/sp26" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:text="64"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_add"
            style="@style/setting_dialog_button"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/setting_add"
            android:textColor="@color/white"
            android:textSize="@dimen/sp26" />

        <TextView
            android:id="@+id/tv_size_default"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="20dp"
            android:text="@string/setting_default"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp80"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="字体"
            android:textColor="#afaeb3"
            android:textSize="@dimen/sp22" />

        <TextView
            android:id="@+id/tv_default"
            style="@style/setting_dialog_button"
            android:layout_width="0dp"
            android:layout_marginRight="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/font_default"
            android:padding="@dimen/dp6"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_qihei"
            style="@style/setting_dialog_button"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/font_qihei"
            android:textSize="14sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_fzxinghei"
            style="@style/setting_dialog_button"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/font_fzxinghei"
            android:textSize="14sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_fzkatong"
            style="@style/setting_dialog_button"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/font_fzkatong"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_simsun"
            style="@style/setting_dialog_button"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_weight="1"
            android:text="简体中文"
            android:padding="@dimen/dp6"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_bysong"
            style="@style/setting_dialog_button"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/font_bysong"
            android:padding="@dimen/dp6"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp80"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="字体"
            android:textColor="#afaeb3"
            android:textSize="@dimen/sp22" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_font_default"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_font_default" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_font_1"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_font_1" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_font_2"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_font_2" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_font_3"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_font_3" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_font_4"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_font_4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp80"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="板式"
            android:textColor="#afaeb3"
            android:textSize="@dimen/sp22" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_line_default"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@mipmap/mo_aotao_reader_line_space1"
            app:border_color="@color/reader_border_default"
            app:border_width="@dimen/dp2" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_line_1"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@mipmap/mo_aotao_reader_line_space2"
            app:border_color="@color/reader_border_default"
            app:border_width="@dimen/dp2" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_line_2"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@mipmap/mo_aotao_reader_line_space3"
            app:border_color="@color/reader_border_default"
            app:border_width="@dimen/dp2" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_line_3"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@mipmap/mo_aotao_reader_line_space4"
            app:border_color="@color/reader_border_default"
            app:border_width="@dimen/dp2" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_line_4"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@mipmap/mo_aotao_reader_line_space5"
            app:border_color="@color/reader_border_default"
            app:border_width="@dimen/dp2" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp80"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="主题"
            android:textColor="#afaeb3"
            android:textSize="@dimen/sp22" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_bg_default"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_default" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_bg_1"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_1" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_bg_2"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_2" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_bg_3"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_3" />

        <com.ysy15350.moduleaotaoreader.view.CircleImageView
            android:id="@+id/iv_bg_4"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_4" />
    </LinearLayout>


</LinearLayout>